--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "someone@example.com"
+  email: "diego.theuerkauf@tuebingen.mpg.de"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
   #facebook: deanattali
   github: diegoabt
@@ -74,7 +74,7 @@ social-network-links:
 #  calendly: yourname
 #  mastodon: instance.url/@username
 #  ORCID: your ORCID ID
-  google-scholar: https://scholar.google.com/citations?user=aJ8qD30AAAAJ&hl=en
+  google-scholar: citations?user=aJ8qD30AAAAJ&hl=en
 #  discord: invite/invite_code or users/userid 
 #  kaggle: yourname
 #  hackerrank: yourname
