--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ author: Diego Baptista Theuerkauf
 navbar-links:
   About Me: "aboutme"
   Publications: "publications"
+  Teaching: "teaching"
     #- Beautiful Jekyll: "https://beautifuljekyll.com"
     #- Learn markdown: "https://www.markdowntutorial.com/"
   #CV: "cv"
